# docker_up_and_running

./: .gitignore  README.md
1_base_dockerfile/: Dockerfile  README.md  main.py  pyproject.toml
2_multistage_and_buildx/: Dockerfile  README.md  main.py  pyproject.toml
3_container_commands/: Dockerfile  README.md  main.py  pyproject.toml
4_collecting_info/: Dockerfile  README.md  docker-healthcheck  main.py  pyproject.toml
5_container_debug/: README.md  main.py  pyproject.toml
6_docker_compose/: README.md
6_docker_compose/compose/: docker-compose.yaml
7_docker_swarm_mode/: README.md
8_kubernetes/: README.md
9_advanced_concepts/: README.md
